# ft_printf

./: .gitignore  CMakeLists.txt  Makefile  README.md  bin_unsigned_long_long.c  c_lower_and_upper_case.c  c_lower_case.c  c_upper_case.c  d_upper_case.c  dec_long_long.c  dec_unsigned_long_long.c  di_lower_case.c  fill_modifier.c  fill_specification.c  ft_long_putnbr.c  ft_printf.c  ft_printf.h  get_foo.c  get_replacing_specification.c  get_specification.c  giv_me_correct_nbr.c  hex_unsigned_long_long.c  length_of_number.c  main.c  o_lower_case.c  o_upper_case.c  oct_unsigned_long_long.c  output  p_lower_case.c  parse_print.c  persent.c  print_data.c  printf_main2.c  s_lower_case.c  s_upper_case.c  u_lower_case.c  u_upper_case.c  with_len.c  x_lower_case.c  x_lower_upper_case.c  (+1 more)
inc/: ft_printf.h
libft/: Makefile  ft_isspace.c  ft_itoa.c  ft_itoa_base.c  ft_llabs.c  ft_lltoa_base.c  ft_lstdelone.c  ft_lstnew.c  ft_ltoa.c  ft_ltoa_base.c  ft_putnbr.c  ft_putunichar.c  ft_strcmp.c  ft_strmap.c  ft_strmapi.c  ft_strnew.c  ft_uitoa_base.c  ft_ulltoa_base.c  ft_ultoa_base.c
libft/inc/: libft.h
